// Copyright (c) 2023-present Hutech University. All rights reserved
// Licensed under the MIT License

syntax = "proto3";

package codification;

import "./common/common.proto";

message Codification {
	string name = 1;
	optional string indexing = 2;
	optional string parent_id = 3;
}

message CodificationCreateRequest {
  Codification codification = 1;
}

message CodificationResponse {
	common.Id id = 1;
	Codification codification = 2;
}

message CodificationUpdateRequest {
	common.Id id = 1;
	Codification codification = 2;
}

service CodificationService {
	rpc CreateCodification(CodificationCreateRequest) returns (CodificationResponse) {}
	rpc UpdateCodification(CodificationUpdateRequest) returns (CodificationResponse) {}
	rpc DeleteCodification(common.Id) returns (CodificationResponse) {}
	rpc GetCodification(common.Id) returns (CodificationResponse) {}
	rpc GetCodifications(common.Criteria) returns (stream CodificationResponse) {}
}
